--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-local-mongoose": "^6.1.0",
     "serve-favicon": "^2.5.0",
     "sharp": "^0.29.1",
+    "socket.io": "^4.2.0",
     "uid": "^1.0.0"
   },
   "devDependencies": {},
