--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^4.3.0",
     "flash": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
