--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ SESSION_SECRET=$2y$12$nNYIs5iStm9gAsdgDGv3l.OyZN3Reav7U.YfwYW/L/171cjIHgjbm
 ADMIN_SECRET=opensesame
 DB_URL= mongodb://127.0.0.1:27017/test
 PORT = 3000
+CLOUD_NAME= sstt
+API_ID = 878854271598434
+API_SECRET = UyilBk07KLomikO5mafQJdDt-zw
+
+mongodb+srv://son03032000:03032000@cluster0.rhe01.mongodb.net/project?retryWrites=true&w=majority
